fix issue #48
the answer was cropped when screen too small

--- a/style.css
+++ b/style.css
@@ -605,20 +605,6 @@ padding-bottom:10px;
 	background-color:#eee;
 	width:300px;
 }
-#sms_small{
-	color:white;
-	background-color:grey;
-	min-height:30px;
-	font-size:20px;
-	text-align:center;
-	margin-top:20px;
-	padding:10px;
-}
-#sms_small:hover{
-	text-decoration:underline;
-	cursor:pointer;
-}
-
 
 #meeting{
 	width:100%;
